# cycles

./: .arcconfig  .clang-format  .gitignore  .gitmodules  AUTHORS  BUILDING.md  CMakeLists.txt  GNUmakefile  Makefile  README  README.md  make.bat
.gitea/default_merge_message/: REBASE_TEMPLATE.md  SQUASH_TEMPLATE.md
.github/workflows/: ci.yaml
examples/: scene_caustics.xml  scene_cube_surface.xml  scene_cube_volume.xml  scene_monkey.xml  scene_osl_stripes.xml  scene_sphere_bump.xml  scene_world_volume.xml
examples/objects/: cube.xml  sphere.xml  suzanne.xml
examples/osl/: stripes.osl
kernel/shaders/: node_fresnel.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  cycles_server.cpp  cycles_standalone.cpp  cycles_xml.cpp  oiio_output_driver.cpp  oiio_output_driver.h
src/app/opengl/: display_driver.cpp  shader.cpp  window.cpp
src/blender/: blender_logging.cpp  blender_mesh.cpp  blender_object.cpp  blender_session.cpp  blender_shader.cpp  blender_sync.cpp  blender_volume.cpp
src/blender/addon/: properties.py  ui.py  version_update.py
src/bvh/: bvh_embree.cpp  embree.cpp
src/cmake/: compiler_utils.cmake  configure_build.cmake  dependency_targets.cmake  detect_platform.cmake  external_libs.cmake  macros.cmake  make_format.py  make_update.py  make_utils.py  precompiled_libs.cmake
src/cmake/Modules/: FindBlosc.cmake  FindGLEW.cmake  FindHIP.cmake  FindHIPRT.cmake  FindLLVM.cmake  FindOpenColorIO.cmake  FindOpenEXR.cmake  FindOpenImageIO.cmake  FindOpenShadingLanguage.cmake  FindOpenSubdiv.cmake  FindOpenVDB.cmake  FindPugiXML.cmake  FindSYCL.cmake  FindUSD.cmake  FindUSDHoudini.cmake  FindUSDPixar.cmake
src/device/: CMakeLists.txt  denoise.cpp  denoise.h  device_cuda.cpp  kernel.cpp
src/device/cuda/: device_impl.cpp
src/device/hip/: device.cpp  device_impl.cpp
src/device/hiprt/: device_impl.cpp
src/device/metal/: device.mm  device_impl.mm  kernel.mm  util.h
src/device/multi/: device.cpp
src/device/oneapi/: device_impl.cpp
src/device/optix/: device_impl.cpp
src/graph/: node.h  node_type.cpp  node_type.h
src/hydra/: CMakeLists.txt  camera.cpp  display_driver.cpp  file_reader.cpp  geometry.inl  light.cpp  plugin.cpp  render_delegate.cpp  session.h
src/hydra/resources/: apple_symbols.map  cycles.json  cycles.json.in  linux_symbols.map
src/integrator/: denoiser.h  denoiser_gpu.cpp  denoiser_gpu.h  denoiser_oidn.cpp  denoiser_oidn.h  denoiser_oidn_gpu.cpp  denoiser_oidn_gpu.h  denoiser_optix.cpp  denoiser_optix.h  pass_accessor_cpu.cpp  path_trace.cpp  render_scheduler.cpp  tile.cpp
src/kernel/: CMakeLists.txt  data_arrays.h  data_template.h  kernel_camera.h  kernel_path.h  kernel_volume.h  types.h
src/kernel/bvh/: local.h  obvh_shadow_all.h  obvh_traversal.h  qbvh_nodes.h  qbvh_shadow_all.h  traversal.h  util.h  volume.h  volume_all.h
src/kernel/camera/: camera.h
src/kernel/closure/: bsdf.h  bsdf_hair_principled.h  bsdf_microfacet.h  bsdf_oren_nayar.h  bsdf_principled_hair_huang.h  bssrdf.h
src/kernel/device/cpu/: bvh.h
src/kernel/device/gpu/: kernel.h
src/kernel/device/oneapi/: compat.h  kernel.cpp
src/kernel/device/optix/: kernel.cu  kernel_shader_raytrace.cu
src/kernel/film/: accumulate.h
src/kernel/geom/: curve_intersect.h  motion_curve.h  motion_point.h  motion_triangle.h  object.h  point_intersect.h  shader_data.h
src/kernel/integrator/: guiding.h  mnee.h  shade_dedicated_light.h  shade_surface.h  shade_volume.h  subsurface.h  subsurface_random_walk.h  surface_shader.h
src/kernel/light/: sample.h  tree.h
src/kernel/osl/: closures_setup.h  osl_services.cpp  services.cpp  services_gpu.h  services_optix.cu
src/kernel/svm/: ao.h  aov.h  attribute.h  bevel.h  blackbody.h  brick.h  brightness.h  bump.h  camera.h  checker.h  clamp.h  closure.h  convert.h  displace.h  fresnel.h  gabor.h  gamma.h  geometry.h  gradient.h  hsv.h  ies.h  image.h  invert.h  light_path.h  magic.h  map_range.h  mapping.h  math.h  math_util.h  mix.h  node_types.h  noisetex.h  normal.h  radial_tiling.h  ramp.h  raycast.h  sepcomb_color.h  sepcomb_vector.h  sky.h  svm.h  (+13 more)
src/kernel/util/: image_2d.h
src/render/: CMakeLists.txt  alembic.cpp  background.cpp  camera.cpp  film.cpp  geometry.cpp  geometry.h  hair.cpp  integrator.cpp  light.cpp  mesh.cpp  mesh.h  nodes.cpp  object.cpp  osl.cpp  particles.cpp  scene.cpp  session.cpp  shader.cpp  volume.cpp
src/scene/: CMakeLists.txt  CMakeLists.txt.rej  alembic.cpp  attribute.cpp  attribute.h  devicescene.h  film.cpp  geometry.cpp  geometry.h  geometry_attributes.cpp  hair.cpp  image.cpp  image_cache.cpp  image_cache.h  image_oiio.cpp  integrator.cpp  integrator.h  light.cpp  light.h  light_tree_debug.cpp  mesh.cpp  mesh_displace.cpp  object.cpp  object.h  osl.cpp  scene.cpp  scene.h  shader.cpp  shader_graph.h  shader_nodes.cpp  shader_nodes.h  svm.cpp  svm.h
src/session/: cache_eviction.cpp  cache_eviction.h  session.cpp  session.h
src/test/: CMakeLists.txt
src/util/: CMakeLists.txt  colorspace.cpp  guarded_allocator.h  half.h  image_maketx.cpp  math.h  math_float3.h  math_float4.h  math_intersect.h  nanovdb.h  openimagedenoise.h  string.cpp  string.h  system.cpp  transform.h  types_float4.h  types_image.h  util_logging.cpp  util_logging.h  util_opengl.h  util_system.cpp  util_version.h  util_xml.h  version.h
tools/: sync_blender_commits.py  sync_git_am.py  update_lib_submodules.py
web/: config.toml
web/content/: _index.md  development.md  features.md
web/static/: CNAME
web/themes/custom/: theme.toml
web/themes/custom/layouts/: index.html
web/themes/custom/layouts/_default/: list.html  single.html
web/themes/custom/layouts/partials/: footer.html  head.html  header.html
web/themes/custom/layouts/shortcodes/: figure.html  gallery.html  load-photoswipe.html
web/themes/custom/static/css/: photoswipe-gallery.css  style.css
web/themes/custom/static/js/: load-photoswipe.js
